# inchef_val

kitchen4.2/: readme.md  startup.sh
kitchen4.2/config/: config.json  log4cpp.conf
kitchen4.2/lib/: CMakeLists.txt  package.xml
kitchen4.2/lib/adapter/: actuator.py  actuator_interface.py
kitchen4.2/lib/comm/: proxy_client.py
kitchen4.2/lib/include/: common_func.h  rlog.h
kitchen4.2/lib/include/log4cpp/: PropertyConfigurator.hh  ShmAppender.hh
kitchen4.2/lib/log/: rlog.cpp  rlog.py
kitchen4.2/lib/log4cpp/src/: AppendersFactory.cpp  LayoutsFactory.cpp  PropertyConfiguratorImpl.cpp  ShmAppender.cpp
kitchen4.2/msg/: CMakeLists.txt  package.xml
kitchen4.2/msg/msg/: bar_calib.msg  broc_calib.msg  broclist.msg  element_info.msg  events.msg  listframes_calib.msg  listframes_luban.msg  listobj.msg  obj.msg  obj_A.msg  objs.msg  objs_A.msg  rail_cmd_algo.msg  sglframe_calib.msg  sglobj.msg  sglobject_calib.msg
kitchen4.2/osinit/: algorithms.service  algorithms.sh  install.md
kitchen4.2/src/: luban_bridge.py  maintenanceNode.py  topicMonitor.py
kitchen4.2/src/ag_perception/: CMakeLists.txt  package.xml
kitchen4.2/src/ag_perception/src/: actuator_perception.py  actuator_perception_calib.py  ag_perception.py
kitchen4.2/src/coco-Mask_RCNN/: .test_step.txt.swp  Key-train_step.txt  Kpreci.txt  Krecall.txt  coco-cankaowenxian.txt  requirements.txt  test_step.txt
kitchen4.2/src/coco-Mask_RCNN/model_val/: caclute_ap.py  generatedata.py  grondtruth_beef_uv.txt  grondtruth_uv.txt  predict_beef_uv.txt  predict_uv.txt  predictdata.py
kitchen4.2/src/coco-Mask_RCNN/model_val/.spyproject/: workspace.ini
kitchen4.2/src/coco-Mask_RCNN/mrcnn/: config.py  model.py  model.py~  utils.py~
kitchen4.2/src/coco-Mask_RCNN/pycocotools/: _mask.c
kitchen4.2/src/coco-Mask_RCNN/samples/: DL_percessing (buckup).py  DL_percessing (copy).py  DL_percessing.py  DL_percessing_val.py  broccolidetection.py  demo.py  demo.py~  demo_ziji.py  demo_ziji.py~  depcunction.py  depcunctionimg.py  depth.py  detectionbar.py  imgs_val.py  mAP.py  maskrcnn.py  maskrcnnold.py  maskrcnnros.py  maskrcnnval.py  ros_mask.py  train_step.txt~
kitchen4.2/src/coco-Mask_RCNN/samples/coco/: coco-biaozhun.py  coco.py  coco.py~  inspect_data.py  inspect_model.py  inspect_weights.py
kitchen4.2/src/log_service/: CMakeLists.txt  package.xml
kitchen4.2/src/log_service/include/: log_service.h
kitchen4.2/src/log_service/src/: main.cpp
kitchen4.2/src/sanity/: config.yaml  config_inchef01.yaml  config_inchef02.yaml  config_inchef03.yaml  darknet_video.py  demo.py  demo_sanity.py  detector.py  image.py  readme.txt  sanitychecker.py  tracker.py
kitchen4.2/src/sanity/yolo/: darknet.py  env.sh  obj.data  obj.names  yolo.py  yolov4-owntest.cfg
kitchen4.2/src/script/: calibration_class.py  depth_data_03.mat  inchef_calibration.py  yaml_test.py  yaml_test.yaml  yaml_test_03.yaml  yaml_test_03_old.yaml
(+4 files in other folders)
